k8s-demo-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-mysql
  labels:
    app: k8s-demo-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-mysql
  template:
    metadata:
      name: k8s-demo-mysql
      labels:
        app: k8s-demo-mysql
    spec:
      containers:
        - name: k8s-demo-mysql
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: k8s-demo-mysql-pvc
