k8s-demo-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-mysql
spec:
  selector:
    app: k8s-demo-mysql
  ports:
    - protocol: TCP
      port: 13306
      targetPort: 3306
      nodePort: 30006
  type: NodePort
