k8s-demo-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-redis
spec:
  selector:
    app: k8s-demo-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30009
  type: NodePort
