k8s-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
spec:
  selector:
    app: k8s-demo
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
  type: LoadBalancer
